src/main/java/org/example/chatssecretos/domain/errors/ErrorAppDataBase.java
package org.example.chatssecretos.domain.errors;

public enum ErrorAppDataBase implements ErrorApp {
    NO_CONNECTION,
    ERROR_DATABASE,
    ERROR_HILOS, ERROR_LEER_FICHEROS
}